# astrosky

./: .gitignore  CLAUDE.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  railway.toml
.claude/hooks/: session-start.sh
.github/workflows/: tests.yml
api/: Dockerfile  requirements-lock.txt  requirements.txt
api/app/: config.py  database.py  main.py  models.py
api/app/routers/: health.py  observations.py  report.py
docs/: research.md
docs/plans/: 2025-12-22-location-presets-design.md  2025-12-22-location-presets-implementation.md  2025-12-22-skycli-design.md  2025-12-22-skycli-implementation.md  2025-12-23-events-feature-design.md  2025-12-23-events-implementation.md  2025-12-23-expanded-dso-catalog-design.md  2025-12-23-expanded-dso-catalog.md  2025-12-23-web-app-design.md  2025-12-23-web-app-phase1-backend.md  2025-12-23-web-frontend-implementation.md
src/skycli/: __init__.py  cli.py  display.py  locations.py  report.py
src/skycli/data/: __init__.py  messier.json  showers.json
src/skycli/sources/: __init__.py  aurora.py  deep_sky.py  events.py  iss.py  meteors.py  planets.py  satellites.py  sun_moon.py  weather.py
tests/: __init__.py  test_api.py  test_cli.py  test_deep_sky.py  test_display.py  test_events.py  test_iss.py  test_locations.py  test_meteors.py  test_planets.py  test_report.py  test_sun_moon.py
web/: .gitignore  PWA_SETUP.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/public/: manifest.json  sw.js
web/src/: App.test.tsx  App.tsx  index.css  main.tsx  registerSW.ts  types.ts
web/src/components/: AchievementsCard.tsx  AuroraCard.tsx  CurrentSkyStatus.test.tsx  CurrentSkyStatus.tsx  DeepSkyCard.test.tsx  DeepSkyCard.tsx  EquipmentProfilesCard.tsx  ErrorBoundary.tsx  EventsCard.test.tsx  EventsCard.tsx  GlassCard.test.tsx  GlassCard.tsx  ISSCard.test.tsx  ISSCard.tsx  InstallPrompt.tsx  LiveCountdowns.test.tsx  LiveCountdowns.tsx  LoadingSkeleton.tsx  LogObservationModal.tsx  MeteorsCard.test.tsx  MeteorsCard.tsx  MoonCard.test.tsx  MoonCard.tsx  NearbyObservationsCard.tsx  NextEvent.test.tsx  NextEvent.tsx  NotificationSettings.tsx  ObservationAnalytics.tsx  (+27 more)
(+38 files in other folders)
