[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skycli"
version = "0.1.0"
description = "CLI tool to see what's visible in the night sky tonight"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "skyfield>=1.46",
    "rich>=13.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
skycli = "skycli.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
    "time-machine>=2.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/skycli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
