[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astrosky"
version = "0.1.2"
description = "CLI tool to see what's visible in the night sky tonight"
authors = [{ name = "AstroSteveo", email = "stevengmjr@gmail.com" }]
license = "MIT"
readme = "README.md"
keywords = ["astronomy", "cli", "night-sky", "planets", "stargazing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "skyfield>=1.46",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "astronomy-engine>=2.1.0",
]

[project.urls]
Homepage = "https://github.com/astrosteveo/astrosky"
Repository = "https://github.com/astrosteveo/astrosky"
Issues = "https://github.com/astrosteveo/astrosky/issues"

[project.scripts]
astrosky = "skycli.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
    "time-machine>=2.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/skycli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
